[package]
name = "simd_json_test"
version = "0.1.0"
authors = ["Masayuki Takeda <mtakeda.enigsol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
simd-json = "0.3.17"
